// TechMarket — DWH star schema (PostgreSQL target)
// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// Призначення: схема `dwh` у PostgreSQL

Table dim_date {
  date_key int [primary key, note: 'Формат YYYYMMDD']
  date date
  year int
  quarter int
  month int
  day int
  day_of_week int
  is_weekend boolean
}

Table dim_region {
  region_key int [primary key, increment]
  region_id char(36) [note: 'Business key з OLTP']
  name varchar(100)
  code varchar(10)
  updated_at timestamp

  Indexes {
    (code) [unique]
  }
}

Table dim_category {
  category_key int [primary key, increment]
  category_id char(36)
  name varchar(255)
  parent_category_key int [ref: > dim_category.category_key, note: 'Nullable']
  updated_at timestamp
}

Table dim_product {
  product_key int [primary key, increment]
  product_id char(36)
  name varchar(255)
  sku varchar(100)
  category_key int [ref: > dim_category.category_key]
  updated_at timestamp

  Indexes {
    (sku) [unique]
  }
}

Table dim_customer {
  customer_key int [primary key, increment]
  customer_id char(36)
  first_name varchar(100)
  last_name varchar(100)
  email varchar(255)
  region_key int [ref: > dim_region.region_key]
  updated_at timestamp

  Indexes {
    (customer_id) [unique]
  }
}

Table dim_employee {
  employee_key int [primary key, increment]
  employee_id char(36)
  first_name varchar(100)
  last_name varchar(100)
  email varchar(255)
  region_key int [ref: > dim_region.region_key]
  updated_at timestamp

  Indexes {
    (employee_id) [unique]
  }
}

Table fact_sales {
  sales_key bigint [primary key, increment]
  order_id char(36)
  order_item_id char(36)
  date_key int [ref: > dim_date.date_key]
  product_key int [ref: > dim_product.product_key]
  customer_key int [ref: > dim_customer.customer_key]
  employee_key int [ref: > dim_employee.employee_key]
  region_key int [ref: > dim_region.region_key]
  quantity int
  revenue decimal(10,2)
  discount_amount decimal(10,2)
  cost decimal(10,2)
  margin decimal(10,2)

  Indexes {
    (date_key)
    (product_key)
    (customer_key)
    (employee_key)
    (region_key)
  }
}

